--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
 asgiref==3.5.0
-backports.zoneinfo==0.2.1
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+cryptography==36.0.1
 Django==3.2
+django-daraja==1.2.0
+gunicorn==20.1.0
+idna==3.3
 psycopg2==2.9.3
+pycparser==2.21
+python-decouple==3.6
 pytz==2021.3
+requests==2.27.1
 sqlparse==0.4.2
+urllib3==1.26.8
