--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
 cryptography==36.0.1
+dj-database-url==0.5.0
 Django==3.2
 django-daraja==1.2.0
+django-heroku==0.3.1
 gunicorn==20.1.0
 idna==3.3
 psycopg2==2.9.3
@@ -14,3 +16,4 @@ pytz==2021.3
 requests==2.27.1
 sqlparse==0.4.2
 urllib3==1.26.8
+whitenoise==6.0.0
